Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ canvas{
 
   <!-- 🐻🐼 DP IMAGE URL -->
   <div class="dp" id="dp">
-    <img src="https://media.tenor.com/kMD8Y7GuynB.gif" alt="Dudu Bubu Love">
+    <img src="./dp.gif" alt="Dudu Bubu Love">
   </div>
 
   <h1 id="question"></h1>
@@ -263,3 +263,4 @@ onresize=()=>{
 
 </body>
 </html>
+
