--- a/index.html
+++ b/index.html
@@ -43,13 +43,6 @@ body{
   100%{transform:scale(1)}
 }
 
-/* ❤️ YES pop */
-@keyframes heartPop{
-  0%{transform:scale(1)}
-  50%{transform:scale(1.4)}
-  100%{transform:scale(1)}
-}
-
 .card{
   background:#fff;
   width:90%;
@@ -89,20 +82,19 @@ h1{
   margin-bottom:28px;
 }
 
-/* 🎀 Buttons */
+/* 🎀 Buttons area */
 .buttons{
   position:relative;
-  height:60px;
+  height:70px;
   display:flex;
   justify-content:center;
-  gap:28px;
+  align-items:center;
 }
 
-/* force equal size */
+/* Equal buttons */
 button{
   min-width:96px;
   height:48px;
-  padding:0;
   border-radius:999px;
   border:none;
   font-size:16px;
@@ -117,16 +109,6 @@ button{
   color:#fff;
 }
 
-#yesBtn.heart{
-  width:56px;
-  min-width:56px;
-  height:56px;
-  padding:0;
-  font-size:26px;
-  border-radius:50%;
-  animation:heartPop .5s ease;
-}
-
 #noBtn{
   background:#eee;
   color:#333;
@@ -136,6 +118,16 @@ button{
   opacity:.95;
 }
 
+/* 😘 Kiss GIF */
+.kiss{
+  display:none;
+}
+.kiss img{
+  width:90px;
+  height:auto;
+}
+
+/* Hint */
 .hint{
   margin-top:34px;
   font-size:13px;
@@ -155,6 +147,7 @@ canvas{
   .dp{width:95px;height:95px}
   h1{font-size:21px}
   button{min-width:88px;height:44px;font-size:15px}
+  .kiss img{width:75px}
 }
 </style>
 </head>
@@ -165,9 +158,9 @@ canvas{
 
 <div class="card">
 
-  <!-- 🐻🐼 DP (self-hosted for GitHub Pages) -->
+  <!-- 🐻 DP -->
   <div class="dp" id="dp">
-    <img src="./dp.gif" alt="Dudu Bubu Love" />
+    <img src="./dp.gif" alt="Dudu Bubu Love">
   </div>
 
   <h1 id="question"></h1>
@@ -175,6 +168,11 @@ canvas{
   <div class="buttons">
     <button id="yesBtn">Yes</button>
     <button id="noBtn">No</button>
+
+    <!-- 😘 Kiss GIF placeholder -->
+    <div class="kiss" id="kiss">
+      <img src="./kiss.gif" alt="Kiss">
+    </div>
   </div>
 
   <div class="hint" id="hint">No seems shy 😈</div>
@@ -192,7 +190,7 @@ let i = 0;
   }
 })();
 
-/* 😈 NO button dodge (desktop + mobile) */
+/* 😈 NO dodge */
 const noBtn = document.getElementById("noBtn");
 const card = document.querySelector(".card");
 function moveNo(){
@@ -203,7 +201,7 @@ function moveNo(){
 noBtn.addEventListener("mouseenter", moveNo);
 noBtn.addEventListener("touchstart", moveNo);
 
-/* 💖 Falling hearts (real heart shapes) */
+/* 💖 Hearts */
 const canvas = document.getElementById("hearts");
 const ctx = canvas.getContext("2d");
 canvas.width = innerWidth;
@@ -215,10 +213,9 @@ let raining = false;
 function drawHeart(x,y,size,alpha){
   ctx.save();
   ctx.translate(x,y);
-  ctx.scale(size/20, size/20);
+  ctx.scale(size/20,size/20);
   ctx.globalAlpha = alpha;
   ctx.fillStyle = "#ff4d6d";
-
   ctx.beginPath();
   ctx.moveTo(0,6);
   ctx.bezierCurveTo(0,0,-10,0,-10,6);
@@ -226,13 +223,11 @@ function drawHeart(x,y,size,alpha){
   ctx.bezierCurveTo(0,18,10,14,10,6);
   ctx.bezierCurveTo(10,0,0,0,0,6);
   ctx.fill();
-
   ctx.restore();
 }
 
 function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-
   if(raining && Math.random() < 0.25){
     hearts.push({
       x: Math.random()*canvas.width,
@@ -243,32 +238,31 @@ function animate(){
       alpha: 1
     });
   }
-
   hearts.forEach(h=>{
     h.y += h.speed;
     h.x += h.drift;
     h.alpha -= 0.003;
     drawHeart(h.x, h.y, h.size, h.alpha);
   });
-
   hearts = hearts.filter(h => h.alpha > 0);
   requestAnimationFrame(animate);
 }
 animate();
 
-/* ❤️ YES action */
+/* ❤️ YES → KISS */
 const yesBtn = document.getElementById("yesBtn");
 const dp = document.getElementById("dp");
 const hint = document.getElementById("hint");
+const kiss = document.getElementById("kiss");
 
 yesBtn.onclick = () => {
   q.innerText = "YAY 💖 It’s a date!";
+  yesBtn.style.display = "none";
   noBtn.style.display = "none";
   hint.style.display = "none";
-  raining = true;
 
-  yesBtn.classList.add("heart");
-  yesBtn.innerText = "❤";
+  kiss.style.display = "block";
+  raining = true;
 
   dp.classList.remove("bounce");
   void dp.offsetWidth;
