--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ canvas{
 
     <!-- 😘 Kiss GIF placeholder -->
     <div class="kiss" id="kiss">
-      <img src="./kiss.gif" alt="Kiss">
+      <img src="./Kiss.GIF" alt="Kiss">
     </div>
   </div>
 
@@ -277,3 +277,4 @@ onresize = () => {
 
 </body>
 </html>
+
