--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@ yesBtn.onclick=()=>{
   dp.classList.add("bounce");
 
   setTimeout(()=>{
-    const msg=encodeURIComponent("I tried to say no… but YES 😂❤️");
+    const msg = encodeURIComponent("I tried to say no... but YES 😂❤️");
+
+ 
     window.location.href="https://wa.me/919788480008?text="+msg;
   },3000);
 };
@@ -265,3 +267,4 @@ onresize=()=>{
 
 </body>
 </html>
+
