--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@ body{
   from{opacity:0;transform:scale(.95)}
   to{opacity:1;transform:scale(1)}
 }
+@keyframes hintPulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.06)}
+}
 
 /* Card */
 .card{
@@ -83,7 +87,7 @@ h1{
   margin-bottom:14px;
 }
 
-/* CENTER AREA — FULL WIDTH */
+/* Center */
 .center{
   width:100%;
   min-height:260px;
@@ -94,8 +98,12 @@ h1{
 
 /* Buttons */
 .buttons{
+  position:relative;
   display:flex;
   gap:24px;
+  justify-content:center;
+  align-items:center;
+  width:100%;
 }
 button{
   min-width:96px;
@@ -106,9 +114,13 @@ button{
   cursor:pointer;
 }
 #yesBtn{background:#ff4d6d;color:#fff}
-#noBtn{background:#eee;color:#333}
+#noBtn{
+  background:#eee;
+  color:#333;
+  transition:left .15s ease, top .15s ease;
+}
 
-/* JWM — BIG, NO LIMITS */
+/* BIG JWM */
 .jwm{
   display:none;
   width:100%;
@@ -119,14 +131,21 @@ button{
   height:auto;
 }
 
-/* Hint */
+/* 🔥 Highlighted Hint */
 .hint{
-  margin-top:18px;
-  font-size:13px;
-  color:#666;
+  margin-top:22px;
+  font-size:16px;                 /* BIGGER */
+  font-weight:600;
+  color:#ff4d6d;
+  background:#fff0f4;
+  display:inline-block;
+  padding:10px 18px;
+  border-radius:999px;
+  box-shadow:0 4px 12px rgba(255,77,109,.25);
+  animation:hintPulse 1.8s infinite;
 }
 
-/* Hearts canvas */
+/* Hearts */
 canvas{
   position:fixed;
   inset:0;
@@ -138,6 +157,7 @@ canvas{
 @media(max-width:480px){
   .dp{width:95px;height:95px}
   h1{font-size:21px}
+  .hint{font-size:15px}
 }
 </style>
 </head>
@@ -169,7 +189,7 @@ canvas{
 </div>
 
 <script>
-/* TYPEWRITER */
+/* Typewriter */
 const text="Bubu will you be my valentine?";
 const q=document.getElementById("question");
 let i=0, typingActive=true;
@@ -181,19 +201,19 @@ let i=0, typingActive=true;
   }
 })();
 
-/* NO DODGE */
+/* NO dodge (fixed) */
 const noBtn=document.getElementById("noBtn");
 const buttons=document.getElementById("buttons");
 function moveNo(){
+  const r = buttons.getBoundingClientRect();
   noBtn.style.position="absolute";
-  const r=buttons.getBoundingClientRect();
-  noBtn.style.left=Math.random()*(r.width-96)+"px";
-  noBtn.style.top=Math.random()*(r.height-48)+"px";
+  noBtn.style.left=Math.random()*(r.width-noBtn.offsetWidth)+"px";
+  noBtn.style.top=Math.random()*(r.height-noBtn.offsetHeight)+"px";
 }
-noBtn.addEventListener("mouseenter",moveNo);
-noBtn.addEventListener("touchstart",moveNo);
+noBtn.addEventListener("mouseenter", moveNo);
+noBtn.addEventListener("touchstart", moveNo);
 
-/* HEARTS */
+/* Hearts */
 const canvas=document.getElementById("hearts");
 const ctx=canvas.getContext("2d");
 canvas.width=innerWidth;
@@ -229,7 +249,7 @@ function animate(){
 }
 animate();
 
-/* YES ACTION + WHATSAPP REDIRECT */
+/* YES + WhatsApp */
 const yesBtn=document.getElementById("yesBtn");
 const dp=document.getElementById("dp");
 const dpImg=document.getElementById("dpImg");
@@ -239,11 +259,9 @@ const jwm=document.getElementById("jwm");
 yesBtn.onclick=()=>{
   typingActive=false;
   q.innerText="YAY 💖 It’s a date!";
-
   dpImg.src="./kiss.gif";
   buttons.style.display="none";
   hint.style.display="none";
-
   jwm.style.display="block";
   raining=true;
 
@@ -252,9 +270,7 @@ yesBtn.onclick=()=>{
   dp.classList.add("bounce");
 
   setTimeout(()=>{
-    const msg = encodeURIComponent("I tried to say no... but YES 😂❤️");
-
- 
+    const msg=encodeURIComponent("I tried to say no... but YES 😂❤️");
     window.location.href="https://wa.me/919788480008?text="+msg;
   },3000);
 };
@@ -267,4 +283,3 @@ onresize=()=>{
 
 </body>
 </html>
-
