--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ canvas{
     </div>
   </div>
 
-  <div class="hint" id="hint">No seems shy 😈</div>
+  <div class="hint" id="hint">No seems lil shy...!!😁😈</div>
 </div>
 
 <script>
@@ -284,3 +284,4 @@ onresize=()=>{
 
 </body>
 </html>
+
