--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ const jwm=document.getElementById("jwm");
 
 yesBtn.onclick=()=>{
   typingActive=false;
-  q.innerText="YAY 💖 It’s a date!";
+  q.innerText="YAY 💖 It’s a date!  Best Decision Everrrrr...!!!!";
   dpImg.src="./kiss.gif";
   buttons.style.display="none";
   hint.style.display="none";
@@ -286,5 +286,6 @@ onresize=()=>{
 
 </body>
 </html>
+
 
 
